# cmake_template

./: CMakeLists.txt  README.md  dir_structure
src/: CMakeLists.txt  Scene.cpp  main.cpp
